# cli

./: .gitignore  .travis.yml  CHANGELOG  Cargo.toml  README.md
.github/workflows/: main.yml
doc/: Makefile  conf.py  index.rst  install.rst  intro.rst
src/: cli.rs  client.rs  lib.rs  main.rs
tests/: cli.rs
tests/snapshots/: cli__prints_help.snap  cli__prints_help_launch.snap  cli__prints_help_search.snap
