[package]
name = "rerobots"
description = "Rust library and command-line interface (CLI) for rerobots"
homepage = "https://github.com/rerobots/cli"
repository = "https://github.com/rerobots/cli"
license = "Apache-2.0"
version = "0.11.2-devel"
authors = ["Scott C. Livingston <scott@rerobots.net>"]
edition = "2018"
include = [
    "/src",
    "/README.md",
    "/keys/webui-public.pem",
]

[dependencies]
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
actix = "0.10"
awc = { version = "2", features = ["openssl"] }
jwt = { version = "0.11", features = ["openssl"] }
chrono = "0.4"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = [ "color" ]

[target."cfg(unix)".dependencies]
openssl-probe = "0.1.4"

[profile.release]
panic = "abort"

[dev-dependencies]
assert_cmd = "1.0"
tempfile = "3.1"
mockito = "0.30.0"
