[package]
name = "rerobots-cli"
description = "command-line interface (CLI) for rerobots"
homepage = "https://github.com/rerobots/cli"
repository = "https://github.com/rerobots/cli"
license = "Apache-2.0"
version = "0.11.4-devel"
authors = ["Scott C. Livingston <scott@rerobots.net>"]
edition = "2018"
include = [
    "/src",
    "/README.md",
    "/CHANGELOG",
]

[[bin]]
name = "rerobots"
path = "src/main.rs"

[dependencies]
env_logger = "0.8"
log = "0.4"
rerobots = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = [ "color" ]

[profile.release]
panic = "abort"

[dev-dependencies]
assert_cmd = "1.0"
insta = "1.16.0"
